[metadata]
name = Fully Adaptive Bayesian Algorithm for Data Analysis FABADA
version = 0.1
author = Pablo M. Sánchez Alarcón
author_email = pablom.sanala@gmail.com
description = Fabada is a non-parametric noise reduction technique and this is the implementation describe in Sanchez-Alarcon, PM et al 2022
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PabloMSanAla/fabada
project_urls =
    Bug Tracker = https://github.com/PabloMSanAla/fabada/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5

