[metadata]
name = Fully Adaptive Bayesian Algorithm for Data Analysis FABADA
version = 0.2
author = Pablo M. Sánchez Alarcón
author_email = pablom.sanala@gmail.com
description = Fabada is a non-parametric noise reduction technique and the implementation is described in Sanchez-Alarcon, P & Ascasibar, Y 2022
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PabloMSanAla/fabada
project_urls =
    Bug Tracker = https://github.com/PabloMSanAla/fabada/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5

